[tool.poetry]
name = "sync-tool"
version = "0.1.0"
description = ""
authors = ["Norbert Gruszka <ngru95@outlook.com>"]
readme = "README.md"
packages = [{include = "sync_tool"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
